--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/axs1svs.css">
     </head>
     <body class="main-site">
-        <div class="site-container">
+        <div class="site-container--cream">
             <!--#region Header-->
             <div class="menu-bar">
                 <h1 style="display: none">Compose It</h1>
@@ -248,9 +248,118 @@
                     </div>
                 </div>
             </article>
+        </div>
+        <div class="site-container--red">
             <!--#region Agency-->
+            <article class="section section--agency">
+                <h2 class="h-two">Compose it</h2>
+                <div class="content content--agency">
+                    <h4 class="h-four">Une agence intégrée</h4>
+                    <div class="content__paragraph">
+                        <h5 class="h-five">Une image cin&eacute;matographique</h5>
+                        <p class="content__text">Nous attachons une importance particuli&egrave;re &agrave; l&rsquo;esth&eacute;tique de nos films en nous appuyant sur l&rsquo;exp&eacute;rience de nos deux r&eacute;alisateurs issus du monde de la fiction et du court-m&eacute;trage. Leur vision artistique nourrit notre cr&eacute;ativit&eacute; au service de chaque film.</p>
+                        <h5 class="h-five">Des prix en festivals</h5>
+                        <p class="content__text">Passionn&eacute;s de cin&eacute;ma, Pierre-Marie Charbonnier et Simon Pierrat &eacute;cument les festivals pendant plusieurs ann&eacute;es, au cours desquelles diff&eacute;rents courts-m&eacute;trages de fiction ont &eacute;t&eacute; prim&eacute;s de nombreuses fois. Par la suite, d&#8217;autres films corporate ont &eacute;galement &eacute;t&eacute; prim&eacute;s dans le cadre de festivals professionnels.</p>
+                        <h5 class="h-five">Du mat&eacute;riel en interne</h5>
+                        <p class="content__text">Nous avons investi dans du mat&eacute;riel de prise de vue cin&eacute;ma afin d&#8217;am&eacute;liorer notre comp&eacute;titivit&eacute; et notre souplesse d&#8217;ex&eacute;cution. Sur chaque projet, nous tournons &agrave; minima avec une cam&eacute;ra RED et des objectif cin&eacute;ma Ang&eacute;nieux.</p>
+                        <h5 class="h-five">Adh&eacute;rent ARPP</h5>
+                        <p class="content__text">Compose It est membre de l&#8217;ARPP : nous ma&icirc;trisons les process qui nous permettent de garantir le respect des r&egrave;gles &eacute;thiques et d&eacute;ontologiques en vigueur dans la publicit&eacute;. Les contenus et les briefs sont valid&eacute;s en respectant les d&eacute;lais.</p>
+                    </div>
+                </div>
+                <div class="content content--agency">
+                    <a class="button-container--inline-lg">
+                        <div class="button-shapes">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 200 200">
+                                <circle class="button-cream--blk" cx="100" cy="100" r="99"/><polygon points="87.37 87.5 87.37 90.85 106.78 90.85 86.31 111.32 88.68 113.69 109.15 93.22 109.15 112.63 112.5 112.63 112.5 87.5 112.5 87.5 112.5 87.5 87.37 87.5"/></svg>
+                        </div>
+                        <div class="button-text button-text--lg">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 200 200">
+                            <path d="M116.19,28.08l-.31,2.66-14.32-1.66,1.61-13.9,14.12,1.63L117,19.48,106,18.2l-.33,2.87,9.16,1.06-.31,2.66-9.16-1.06L105,26.79Z"/><path d="M137.69,23.81l-5,13.07-2.61-1-5.76-13-3.62,9.45-2.89-1.11,5-13.08L126,19.32l5.38,12.34,3.44-9Z"/><path d="M154.32,47.88c-1.78,2.11-5,1.89-8.81-1.3a12.92,12.92,0,0,1-4.73-7.67l2.81-.48a9.56,9.56,0,0,0,3.71,6.15c2.17,1.83,3.62,2.34,4.37,1.45s-.15-2.05-2.43-4.34c-2.84-2.84-5.12-5.9-3.19-8.2s5.3-1.44,8.6,1.34A12.23,12.23,0,0,1,159,41.28l-2.77.56a9.2,9.2,0,0,0-3.3-5c-1.44-1.24-3.43-2.48-4.25-1.5s.68,2.3,2.66,4.26C154.51,42.78,156.3,45.53,154.32,47.88Z"/><path d="M161.76,59.77l-5-6.81-3.27.55-2-2.75,15.67-2.34,2.08,2.82-6.87,14.28-2-2.78Zm1.3-2.62,2.87-5.72-6.31,1Z"/><path d="M175.32,61.06l-7.77,9.19,12,.45,1.4,3.16-15.66-.8L164,70l10-12.1Z"/><path d="M168.05,81l13.56-3.45.79,3.1-13.56,3.45Z"/><path d="M176.83,85.73c4.67-.32,7.66,2.92,8,8.37s-2.14,9.07-6.81,9.39-7.66-2.92-8-8.37S172.16,86.05,176.83,85.73Zm1,14.51c3-.21,4.52-2.5,4.29-5.95S180,88.78,177.05,89s-4.52,2.48-4.28,6S174.83,100.44,177.82,100.24Z"/><path d="M168.44,118.1l5.43-3,1-5-4.68-.9.6-3.12,13.75,2.64-1.82,9.48c-.65,3.36-2.68,5.6-5.67,5-2.33-.44-3.49-2.27-3.58-4.65l-5.71,3.3Zm7.79-1.34c-.31,1.65-.16,2.95,1.38,3.24s2.16-.85,2.47-2.5l1.19-6.2-3.85-.74Z"/><path d="M165.07,147.1c-2.69-1.55-2.91-4.45-1.12-7.57l3.19-5.53-3.92-2.25,1.59-2.77L177,136l-4.78,8.3C170.37,147.38,167.72,148.63,165.07,147.1Zm1.61-2.84c1.38.8,2.4,0,3.3-1.56l3.05-5.3-3.61-2.08-3,5.31C165.47,142.19,165.29,143.47,166.68,144.26Z"/><path d="M148.88,155.21l-2-1.87,8.91-9.62L166,153.24l-2.17,2.35L155.61,148Z"/><path d="M141.35,174.26l-4.18-6.1c-2.38-3.47-1.7-7.38,2.49-10.26s8.09-2.1,10.47,1.36l4.19,6.1-2.64,1.81-4.05-5.9c-1.59-2.31-3.89-2.77-6.38-1.06s-2.9,4-1.31,6.33l4.05,5.91Z"/><path d="M118.5,173c-1-2.58.83-5.29,5.48-7a12.79,12.79,0,0,1,9-.32l-1,2.68a9.61,9.61,0,0,0-7.19.18c-2.66,1-3.82,2-3.42,3.08s1.87.89,5,0c3.87-1.07,7.66-1.54,8.71,1.27s-1.36,5.33-5.41,6.83a12.32,12.32,0,0,1-7.76.59l.88-2.7a9.17,9.17,0,0,0,5.95-.41c1.79-.64,3.84-1.76,3.4-3s-2.33-.55-5,.21C122.84,175.67,119.57,175.88,118.5,173Z"/><path d="M82.94,171.71l.34-2.65,14.3,1.83L95.8,184.78,81.69,183l.34-2.66,11,1.41.37-2.86-9.14-1.18.34-2.65,9.14,1.17.39-3Z"/><path d="M61.38,175.72l5.17-13,2.6,1,5.6,13.11,3.73-9.4,2.88,1.14-5.17,13L73,180.35,67.81,168l-3.55,8.92Z"/><path d="M45,151.44c1.81-2.09,5-1.83,8.8,1.41a12.82,12.82,0,0,1,4.63,7.73l-2.82.45a9.52,9.52,0,0,0-3.62-6.2c-2.15-1.86-3.6-2.39-4.36-1.52s.13,2.07,2.38,4.38c2.81,2.88,5.05,6,3.08,8.24s-5.31,1.39-8.58-1.44A12.19,12.19,0,0,1,40.28,158l2.78-.53a9.16,9.16,0,0,0,3.23,5c1.43,1.26,3.4,2.52,4.24,1.55s-.65-2.31-2.61-4.29C44.78,156.53,43,153.77,45,151.44Z"/><path d="M37.76,139.49l4.94,6.86,3.28-.51,2,2.78-15.69,2.15-2-2.84,7-14.2,2,2.81Zm-1.33,2.6-2.93,5.68,6.32-1Z"/><path d="M24.21,138l7.88-9.1-12-.59-1.36-3.18,15.65,1,1.32,3.11-10.09,12Z"/><path d="M31.72,118.17l-13.6,3.28-.75-3.11L31,115.06Z"/><path d="M23,113.32c-4.67.26-7.62-3-7.93-8.47s2.26-9,6.93-9.31,7.62,3,7.93,8.47S27.68,113.06,23,113.32ZM22.18,98.8c-3,.17-4.55,2.44-4.35,5.9s2,5.53,5,5.36,4.55-2.42,4.36-5.89S25.18,98.63,22.18,98.8Z"/><path d="M31.77,81.07l-5.46,3-1,5L30,90l-.64,3.11L15.61,90.29l1.93-9.47c.68-3.35,2.75-5.56,5.73-4.95,2.33.47,3.46,2.32,3.53,4.7l5.74-3.24ZM24,82.32c.34-1.65.19-2.94-1.34-3.25s-2.16.82-2.5,2.46l-1.26,6.2,3.84.78Z"/><path d="M35.52,52.09c2.67,1.58,2.86,4.48,1,7.58l-3.25,5.49,3.89,2.3-1.63,2.76-12-7.14,4.89-8.24C30.22,51.74,32.89,50.53,35.52,52.09Zm-1.64,2.82c-1.38-.82-2.4,0-3.32,1.52L27.44,61.7,31,63.82l3.12-5.27C35.06,57,35.26,55.72,33.88,54.91Z"/><path d="M51.8,44.19l2,1.9-9,9.5L34.63,46l2.2-2.32L45,51.37Z"/><path d="M59.53,25.25l4.12,6.15C66,34.89,65.25,38.8,61,41.62s-8.11,2-10.45-1.47L46.47,34l2.66-1.78,4,6C54.67,40.49,57,41,59.47,39.3s2.94-4,1.38-6.32l-4-5.95Z"/><path d="M82.4,26.78c.93,2.6-.89,5.29-5.57,7a12.88,12.88,0,0,1-9,.21l1-2.67a9.57,9.57,0,0,0,7.19-.1c2.67-.95,3.85-1.94,3.46-3s-1.85-.92-5-.1c-3.88,1-7.68,1.44-8.69-1.38s1.42-5.31,5.49-6.76a12.2,12.2,0,0,1,7.77-.49l-.92,2.68a9.13,9.13,0,0,0-6,.34c-1.8.61-3.87,1.71-3.44,2.92s2.33.57,5-.15C78.1,24.05,81.37,23.88,82.4,26.78Z"/></svg>
+                        </div>
+                    </a>
+                    <ul class="list--numbered">
+                        <li class="list-item list-item--numbered"><h5 class="h-five">CONCEPTION</h5><h5 class="h-five">01</h5></li>
+                        <li class="list-item list-item--numbered"><h5 class="h-five">PRÉ-PRODUCTION</h5><h5 class="h-five">02</h5></li>
+                        <li class="list-item list-item--numbered"><h5 class="h-five">RÉALISATION</h5><h5 class="h-five">03</h5></li>
+                        <li class="list-item list-item--numbered"><h5 class="h-five">POST-PRODUCTION</h5><h5 class="h-five">04</h5></li>
+                        <li class="list-item list-item--numbered"><h5 class="h-five">DIFFUSION</h5><h5 class="h-five">05</h5></li>
+                    </ul>
+                </div>
+            </article>
             <!--#region Insta-->
+            <article class="section section--insta">
+                <div class="content--insta">
+                    <h2 class="h-two h-two--red">Insta</h2>
+                    <a href="https://www.instagram.com/p/CWDy2H9o77J/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/254838928_1321584128281022_5178029343191846147_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CWDyylDocsJ/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/254379286_108885048179561_448578568573009036_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CWDyvo-oZuS/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/254292369_131941605864640_5830075327915987860_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CWAt0XOoF1y/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/253787394_1760563340802190_1757040334419137845_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CWAtvVjI-bz/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/254068008_401673668341702_802960703123140033_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CWAte7cINvp/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/254078147_214410634163782_2193567389439757245_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CTwYMSmohpL/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/241702325_574550980647449_5311797978791950906_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CTwYGrNoCWB/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/241722466_554018682510933_5549561933152187304_n.jpg" alt="Image">
+                    </figure></a>
+                    <a href="https://www.instagram.com/p/CTwX_iIIVXl/"><figure class="compimg compimg--insta">
+                        <img class="img" src="img/241953127_134985438847846_6240426476278452073_n.jpg" alt="Image">
+                    </figure></a>
+                </div>
+            </article>
             <!--#region Trust-->
+            <article class="section section--trust">
+                <div class="content content--trust">
+                    <h4 class="h-four">Ils nous font confiance</h4>
+                    <div class="content__list--trust">
+                        <ul class="list--nonum">
+                            <li class="list-item list-item--nonum">
+                                <h5 class="h-five h-five--red">Agence Service Plan</h5>
+                                <figure class="compimg compimg--trust list__img">
+                                <img class="img" src="../img/Logo-SERVICE-PLAN--480x48.png" alt="Logo">
+                                </figure>
+                            </li>
+                            <li class="list-item list-item--nonum">
+                                <h5 class="h-five h-five--red">Sncf Réseau</h5>
+                                <figure class="compimg compimg--trust list__img">
+                                    <img class="img" src="../img/Logo-SNCF-RESEAUX.png" alt="Logo">
+                                </figure>
+                            </li>
+                            <li class="list-item list-item--nonum">
+                                <h5 class="h-five h-five--red">Nokia</h5>
+                                <figure class="compimg compimg--trust list__img">
+                                    <img class="img" src="../img/Logo-nokia-3--480x270.png" alt="Logo">
+                                </figure>
+                            </li>
+                            <li class="list-item list-item--nonum">
+                                <h5 class="h-five h-five--red">Boralex</h5>
+                                <figure class="compimg compimg--trust list__img">
+                                    <img class="img" src="../img/Logo-boralex--480x121.png" alt="Logo">
+                                </figure>
+                            </li>
+                            <li class="list-item list-item--nonum">
+                                <h5 class="h-five h-five--red">Agence Nouveau monde</h5>
+                                <figure class="compimg compimg--trust list__img">
+                                    <img class="img" src="../img/logo_NM_noir-480x136.png" alt="Logo">
+                                </figure>
+                            </li>
+                        </ul>
+                        <a href="#!">Voir Plus</a>
+                    </div>
+                </div>
+            </article>
             <!--#region Awards-->
             <!--#region Contact-->
         </div>
