Content section added

--- a/index.html
+++ b/index.html
@@ -473,10 +473,10 @@
                         </div>
                         <div class="content content--contact content--contact--block">
                             <a href="tel:0629664445">
-                                <h2 class="h-two h-two--red" style="font-size: 7.5rem;">06.29.66.44.45</h2>
+                                <h2 class="h-two h-two--red" style="font-size: 7.5vw;">06.29.66.44.45</h2>
                             </a>
                             <a href="mailto:contact@composeitprod.com">
-                                <h2 class="h-two h-two--red" style="font-size: 3.5rem;">contact@composeitprod.com</h2>
+                                <h2 class="h-two h-two--red" style="font-size: 3.5vw;">contact@composeitprod.com</h2>
                             </a>
                         </div>
                         <div class="content content--footer">
