Adjusted site responsiveness for screen sizes 1000px-1920px

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
             <!--#region Agency-->
             <article class="section section--agency">
-                <h2 class="h-two">Compose it</h2>
+                <h2 class="h-two h-two--agency">Compose it</h2>
                 <div class="content content--agency">
                     <h4 class="h-four">Une agence intégrée</h4>
                     <div class="content__paragraph">
@@ -361,7 +361,7 @@
             </article>
             <!--#region Awards-->
             <article class="section section--awards">
-                <h2 class="h-two">Récompenses</h2>
+                <h2 class="h-two h-two--awards">Récompenses</h2>
                 <div class="content content--awards">
                     <div class="table">
                         <div class="table__row">
@@ -473,10 +473,10 @@
                         </div>
                         <div class="content content--contact content--contact--block">
                             <a href="tel:0629664445">
-                                <h2 class="h-two h-two--red" style="font-size: 7.5vw;">06.29.66.44.45</h2>
+                                <h2 class="h-two h-two--red h-two--phone">06.29.66.44.45</h2>
                             </a>
                             <a href="mailto:contact@composeitprod.com">
-                                <h2 class="h-two h-two--red" style="font-size: 3.5vw;">contact@composeitprod.com</h2>
+                                <h2 class="h-two h-two--red h-two--email">contact@composeitprod.com</h2>
                             </a>
                         </div>
                         <div class="content content--footer">
