Cleaned up /img folder and updated components and main 'index.html'

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/254838928_1321584128281022_5178029343191846147_n.jpg"
+              src="img/insta-1.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -814,7 +814,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/254379286_108885048179561_448578568573009036_n.jpg"
+              src="img/insta-2.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -822,7 +822,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/254292369_131941605864640_5830075327915987860_n.jpg"
+              src="img/insta-3.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -830,7 +830,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/253787394_1760563340802190_1757040334419137845_n.jpg"
+              src="img/insta-4.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -838,7 +838,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/254068008_401673668341702_802960703123140033_n.jpg"
+              src="img/insta-5.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -846,7 +846,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/254078147_214410634163782_2193567389439757245_n.jpg"
+              src="img/insta-6.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -854,7 +854,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/241702325_574550980647449_5311797978791950906_n.jpg"
+              src="img/insta-7.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -862,7 +862,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/241722466_554018682510933_5549561933152187304_n.jpg"
+              src="img/insta-8.jpg"
               alt="Image"
             /></figure
         ></a>
@@ -870,7 +870,7 @@
           ><figure class="compimg compimg--insta">
             <img
               class="img"
-              src="img/241953127_134985438847846_6240426476278452073_n.jpg"
+              src="img/insta-9.jpg"
               alt="Image"
             /></figure
         ></a>
